# comitari

./: .gitignore  LICENSE  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: aws.yml  deploy.yml
backend/: conftest.py  manage.py  pyproject.toml
backend/backends/otp/: app.py  base.py  cache.py
backend/backends/otp/tests/: test_app.py  test_cache.py
backend/backends/pools/: __init__.py  otp.py
backend/chat/: admin.py  models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/comitari/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/core/: models.py
backend/static/: README.md
backend/users/: admin.py  choices.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_historicaluser_two_factor_user_two_factor.py
backend/users/tests/: baker_recipes.py  test_models.py
config/: .env.sample
docker/angular/: Dockerfile
docker/django/: Dockerfile  docker-entrypoint.sh
docker/nginx/: prod.conf
frontend/: angular.json  package-lock.json  package.json
frontend/src/app/: app-material.module.ts  app-routing.module.ts  app.module.ts
frontend/src/app/components/app/: app.component.css  app.component.html  app.component.ts
frontend/src/app/components/chat/: chat.component.css  chat.component.html  chat.component.ts
frontend/src/app/components/login/: login-form.component.html  login-form.component.ts  login.component.css  login.component.html  login.component.ts
frontend/src/app/components/register/: register.component.css  register.component.html  register.component.ts
frontend/src/app/directives/: scroll-into-view.directive.ts
frontend/src/app/dtos/: error.dto.ts  login.dto.ts
frontend/src/app/interceptors/: api.interceptor.ts
frontend/src/app/models/: error.model.ts  login.model.ts  message.model.ts  register.model.ts  user.model.ts
frontend/src/app/services/: auth.service.ts  chat.service.ts  event.service.ts  user.service.ts
